[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/extern/StubMap.glb" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/extern/Material.material" type="Material" id=3]
[ext_resource path="res://scenes/Spawner.gd" type="Script" id=5]
[ext_resource path="res://Zombie/Zombie.tscn" type="PackedScene" id=6]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.0392157, 0.0862745, 0.360784, 1 )

[sub_resource type="ArrayMesh" id=2]
lightmap_size_hint = Vector2( 4189, 8540 )
surfaces/0 = {
"aabb": AABB( -1, -1, -1, 2.00001, 2.00001, 2.00001 ),
"array_data": PoolByteArray( 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 57, 0, 52, 47, 36, 172, 55, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 0, 0, 129, 0, 0, 127, 0, 59, 0, 56, 243, 59, 172, 59, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 0, 0, 129, 0, 0, 127, 0, 57, 0, 56, 243, 59, 172, 55, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 59, 0, 52, 47, 36, 172, 59, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 57, 0, 0, 2, 29, 41, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 54, 0, 52, 22, 31, 255, 59, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 54, 0, 0, 22, 31, 41, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 57, 0, 52, 2, 29, 255, 59, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 58, 250, 59, 125, 56, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 60, 245, 59, 56, 45, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 58, 245, 59, 125, 56, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 60, 250, 59, 56, 45, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 0, 52, 210, 7, 0, 0, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 56, 210, 59, 172, 55, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 0, 56, 210, 59, 0, 0, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 52, 210, 7, 172, 55, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 52, 106, 34, 238, 59, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 56, 235, 59, 235, 59, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 52, 106, 34, 235, 59, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 56, 235, 59, 238, 59, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 57, 0, 56, 251, 59, 95, 50, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 54, 0, 58, 255, 59, 109, 57, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 54, 0, 56, 255, 59, 95, 50, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 57, 0, 58, 251, 59, 109, 57 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 0, 0, 3, 0, 1, 0, 4, 0, 5, 0, 6, 0, 4, 0, 7, 0, 5, 0, 8, 0, 9, 0, 10, 0, 8, 0, 11, 0, 9, 0, 12, 0, 13, 0, 14, 0, 12, 0, 15, 0, 13, 0, 16, 0, 17, 0, 18, 0, 16, 0, 19, 0, 17, 0, 20, 0, 21, 0, 22, 0, 20, 0, 23, 0, 21, 0 ),
"blend_shape_data": [  ],
"format": 97591,
"index_count": 36,
"material": ExtResource( 3 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.376471, 0.364706, 0.439216, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 30000, 7.42339, 30000 )

[sub_resource type="ArrayMesh" id=5]
lightmap_size_hint = Vector2( 1644, 2460 )
surfaces/0 = {
"aabb": AABB( -1, -1, -1, 2, 2.00001, 2 ),
"array_data": PoolByteArray( 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 58, 255, 59, 255, 59, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 60, 23, 56, 99, 57, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 58, 255, 59, 99, 57, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 60, 23, 56, 255, 59, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 57, 0, 56, 3, 56, 126, 53, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 54, 0, 58, 235, 59, 91, 57, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 54, 0, 56, 235, 59, 126, 53, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 57, 0, 58, 3, 56, 91, 57, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 52, 251, 12, 58, 57, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 56, 209, 55, 59, 53, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 52, 251, 12, 59, 53, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 56, 209, 55, 58, 57, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 57, 0, 0, 251, 12, 169, 10, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 54, 0, 52, 209, 55, 57, 53, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 54, 0, 0, 209, 55, 169, 10, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 127, 0, 0, 127, 0, 127, 0, 57, 0, 52, 251, 12, 57, 53, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 0, 52, 75, 29, 62, 57, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 56, 229, 55, 218, 59, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 0, 56, 75, 29, 218, 59, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 52, 229, 55, 62, 57, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 57, 0, 52, 212, 55, 152, 35, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 0, 0, 129, 0, 0, 127, 0, 59, 0, 56, 210, 59, 117, 53, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 0, 0, 129, 0, 0, 127, 0, 57, 0, 56, 212, 55, 117, 53, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 0, 0, 129, 0, 0, 127, 0, 59, 0, 52, 210, 59, 152, 35 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 0, 0, 3, 0, 1, 0, 4, 0, 5, 0, 6, 0, 4, 0, 7, 0, 5, 0, 8, 0, 9, 0, 10, 0, 8, 0, 11, 0, 9, 0, 12, 0, 13, 0, 14, 0, 12, 0, 15, 0, 13, 0, 16, 0, 17, 0, 18, 0, 16, 0, 19, 0, 17, 0, 20, 0, 21, 0, 22, 0, 20, 0, 23, 0, 21, 0 ),
"blend_shape_data": [  ],
"format": 97591,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.309804, 0.0784314, 0.0784314, 1 )

[sub_resource type="BoxShape" id=7]

[sub_resource type="Curve3D" id=8]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -214.062, 10.479, -244.637, 0, 0, 0, 0, 0, 0, -114.583, 11.5053, -301.913, 0, 0, 0, 0, 0, 0, 5.99843, 9.45259, -323.015, 0, 0, 0, 0, 0, 0, 117.536, 13.8303, -304.928, 0, 0, 0, 0, 0, 0, 210.987, 12.5314, -256.695, 0, 0, 0, 0, 0, 0, 279.52, 10.3601, -190.244, 0, 0, 0, 0, 0, 0, 330.767, 10.9147, -102.823, 0, 0, 0, 0, 0, 0, 369.956, 10.9147, -9.37215, 0, 0, 0, 0, 0, 0, 345.839, 10.9147, 93.1219, 0, 0, 0, 0, 0, 0, 288.563, 10.9147, 210.689, 0, 0, 0, 0, 0, 0, 204.156, 10.479, 280.023, 0, 0, 0, 0, 0, 0, 80.5607, 10.479, 364.43, 0, 0, 0, 0, 0, 0, -49.0641, 11.5053, 352.372, 0, 0, 0, 0, 0, 0, -166.631, 10.479, 304.139, 0, 0, 0, 0, 0, 0, -272.14, 11.5053, 201.645, 0, 0, 0, 0, 0, 0, -338.459, 9.96162, 75.0347, 0, 0, 0, 0, 0, 0, -340.673, 8.9355, -69.7945, 0, 0, 0, 0, 0, 0, -289.426, 8.9355, -178.318, 0, 0, 0, 0, 0, 0, -214.062, 10.479, -244.637 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
}

[node name="StubMap" instance=ExtResource( 1 )]

[node name="Ground" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
material/0 = SubResource( 1 )

[node name="Ground" type="MeshInstance" parent="Ground" index="0"]
transform = Transform( 1000, 0, 0, 0, 2, 0, 0, 0, 1000, -11.5744, -0.8759, -9.7633 )
use_in_baked_light = true
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="StaticBody" type="StaticBody" parent="Ground" index="1"]

[node name="CollisionShape" type="CollisionShape" parent="Ground/StaticBody" index="0"]
shape = SubResource( 4 )

[node name="Player" parent="." index="1" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 52, 0 )
sprint_speed = 30

[node name="Cube" parent="." index="2"]
visible = false

[node name="Tower" type="Spatial" parent="." index="3"]
transform = Transform( 20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 20, 0 )

[node name="Cube" type="MeshInstance" parent="Tower" index="0"]
use_in_baked_light = true
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="StaticBody" type="StaticBody" parent="Tower" index="1"]

[node name="CollisionShape" type="CollisionShape" parent="Tower/StaticBody" index="0"]
shape = SubResource( 7 )

[node name="DirectionalLight" type="DirectionalLight" parent="." index="5"]
transform = Transform( 0.110408, 0.371595, -0.921807, -0.0441914, 0.928395, 0.368958, 0.992903, 1.50076e-08, 0.118924, -32.1225, 69.4505, 0 )

[node name="Spawner" type="Spatial" parent="." index="6"]
script = ExtResource( 5 )
zombie = ExtResource( 6 )
target_path = NodePath("../Tower")

[node name="Timer" type="Timer" parent="Spawner" index="0"]
one_shot = true
autostart = true

[node name="SpawnPath" type="Path" parent="Spawner" index="1"]
transform = Transform( 0.3, 0, 0, 0, 1, 0, 0, 0, 0.3, -1.16484, -1.02632, -3.41154 )
curve = SubResource( 8 )

[node name="SpawnLocation" type="PathFollow" parent="Spawner/SpawnPath" index="0"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_Timer_timeout"]
